tnp/vpn/static/vpn/css/style.css
@import url('https://fonts.googleapis.com/css?family=Courgette|Satisfy');
body {
  padding-top: 55px;
  padding-left: 55px;
  padding-right: 55px;
  padding-bottom: 55px;
  background:url(../img/patterns/pattern.png),url(../img/patterns/pattern.png),url(../img/patterns/patternvert.png),url(../img/patterns/patternvert.png);
  background-position: top left, bottom left, top left, top right;
  background-repeat: no-repeat;
  font-family: "Open Sans", sans-serif;
  overflow-x: hidden;
  background-color: #fdfdc1;
}



a {
  color: #1dc8cd;
  transition: 0.5s;
}

a:hover, a:active, a:focus {
  color: #1dc9ce;
  outline: none;
  text-decoration: none;
}

p {
  padding: 0;
  font-size: 14px;
  margin: 0 0 30px 0;
}

li  {
  font-size:14px;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  margin: 0 0 20px 0;
  padding: 0;
}

h2  {
  font-size: 20px;
}

h3  {
  font-size: 15px;
}
#container1 {
  overflow: hidden;
  width: 100%;
  height: 75px;
}
#imgs li {
  padding-left: 10px;
  display: inline-block;
}

#imgs img {
  height: 70px;
}

.section-header {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Back to top button */
.back-to-top {
  position: fixed;
  display: none;
  background: linear-gradient(45deg, #802050 , #802050);
  color: #ebec8f;
  padding: 2px 20px 8px 20px;
  font-size: 16px;
  border-radius: 4px 4px 0 0;
  right: 15px;
  bottom: 0;
  transition: none;
}

.back-to-top:focus {
  background: linear-gradient(45deg, #802050 , #802050);
  color: #fff;
  outline: none;
}

.back-to-top:hover {
  background: linear-gradient(45deg, #ebec8f , #ebec8f);
  color: #802050;
}

/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
#main   {
  padding-left: 8%;
  padding-right: 8%;
  padding-top: 3%;
  padding-bottom: 3%;
  background-color: #fdfdc1;
}
.col-lg-8 {
  background-image:  url(../img/patterns/border-top-right.png), url(../img/patterns/border-bottom-left.png);
  background-color: #f3d6aa;
  background-position: top right, bottom left;
  background-repeat: no-repeat;
  padding: 20px;
}

.card-header  {
  font-size: 15px;
  background-color: #f3d6aa;
  //background:url(../img/patterns/pattern2.jpg) center;
}

.card-body  {
  font-size: 14px;
  height: 200px;
  background-color: #f3d6aa;
  overflow-y: hidden;
}
.card-body img {
  width: 80%;
}
.col > .card > .card-body   {
  height: auto;
}

.above-nav{
  height: 92px;
  top: 0;
  //background: linear-gradient(45deg, #1de099, #1dc8cd);
  //background-color: #ebec8f;
  background-color: white;
  //background:url(../img/patterns/pattern2.jpg) fixed center center;
  display: block;
  z-index: 999;
}

.above-nav img  {
  padding-top: 3px;
  height: 86px;
  z-index: 999;
}

.affix {
  top: 0px;
  width:100%;
}

.disp   {
}

.box  {
  padding: 30px;
  margin-bottom: 10px;
  box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
  background: #fff;
  transition: 0.4s;
}

#header {
  padding: 30px 0;
  height: 92px;
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  transition: all 0.5s;
  z-index: 997;
}

#header #logo {
  float: left;
}

#header #logo h1 {
  font-size: 36px;
  margin: -4px 0 0 0;
  padding: 0;
  line-height: 1;
  display: inline-block;
  font-family: "Montserrat", sans-serif;
  font-weight: 300;
  letter-spacing: 3px;
  text-transform: uppercase;
}

#header #logo h1 a, #header #logo h1 a:hover {
  color: #fff;
}

#header #logo img {
  height: 48px;
}

@media (max-width: 768px) {
  #header #logo h1 {
    font-size: 28px;
    margin-top: 0;
  }
  #header #logo img {
    max-height: 40px;
  }
  #team .member .pic img {
  height: 100%;
  width: auto;
}
}

#header.header-fixed {
  background: linear-gradient(45deg, #802050 , #802050 );
  //background: linear-gradient(45deg,  #1d8348, #1a5276 );
  //background: linear-gradient(45deg,   #28b463, #2471a3);
  //background: linear-gradient(45deg,   #17202a, #2e4053 );
  padding: 20px 0;
  height: 72px;
  transition: all 0.5s;
}
/*--------------------------------------------------------------
# Intro Section
--------------------------------------------------------------*/
#intro {
  width: 100%;
  height: 100vh;
  background-size: cover;
  position: relative;
}

.home   {
  background: linear-gradient(45deg, rgba( 171, 235, 198, 0.3), rgba(169, 204, 227, 0.3)), url("../img/gate.jpeg") center top no-repeat;
}

.contact  {
  background: linear-gradient(45deg, rgba( 171, 235, 198, 0.3), rgba(169, 204, 227, 0.3)), url("../img/sample1.jpg") center top no-repeat;
}

@media (min-width: 1024px) {
  #intro {
    background-attachment: fixed;
  }
}

#intro .intro-text {
  position: absolute;
  left: 0;
  top: 160px;
  right: 0;
  display: flex;
  align-items: center;
  background-color: rgba( 0, 0, 0, 0.3);
  justify-content: center;
  text-align: center;
  flex-direction: column;
}

#intro .intro-text1 {
  position: absolute;
  left: 0;
  top: 350px;
  right: 0;
  height: calc(50% - 60px);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  flex-direction: column;
}

#intro h2 {
  margin: 30px 0 10px 0;
  padding: 0 15px;
  font-size: 48px;
  font-weight: 400;
  line-height: 56px;
  //font-family: 'Courgette', cursive;
  font-family: 'Satisfy', cursive;
  color: #fff;
  text-shadow: 2px 2px 3px #000;
}

@media (max-width: 768px) {
  #intro h2 {
    font-size: 28px;
    line-height: 36px;
  }
}

#intro p {
  color: #fff;
  margin-bottom: 20px;
  padding: 0 15px;
  font-size: 18px;
  line-height: 24px;
}

#intro .btn-get-started {
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 8px 28px;
  border-radius: 50px;
  transition: 0.5s;
  margin: 10px;
  border: 2px solid #fff;
  color: #fff;
}

#intro .btn-get-started:hover {
  color: #1dc8cd;
  background: #fff;
}
/* ... */

